--- a/index.html
+++ b/index.html
@@ -43,14 +43,22 @@
 
         <!-- Main Menu -->
         <div id="mainMenu" class="page">
-            <div class="page-nav">
-                <button class="btn btn-primary" onclick="showCreateTemplate()">
-                    ➕ Create Template
-                </button>
-            </div>
+            
+        <div class="page-nav">
+        <button class="btn btn-primary" onclick="showCreateTemplate()">
+        ➕ Create Template
+        </button>
+        <button class="btn" onclick="showTemplateFolders()">
+        📂 Folders
+        </button>
+        </div>
 
             <div id="templateGrid" class="template-grid">
                 <!-- Templates will be loaded here -->
+            </div>
+
+            <div id="folderGrid" class="template-grid">
+                <!-- Folders will be added here -->
             </div>
         </div>
 
@@ -140,6 +148,19 @@
         </div>
     </div>
 
+    <!-- Template Preview Modal -->
+    <div id="previewModal" class="modal">
+        <div class="modal-content">
+        <h3 id="previewTitle">Template Preview</h3>
+        <div id="previewContent"></div>
+        <div class="modal-buttons">
+        <button class="btn" onclick="closePreviewModal()">Close</button>
+        </div>
+        </div>
+    </div>
+
+
     <script src="app.js"></script>
-<script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'978ef0ef50d38b47',t:'MTc1NjgzNjM4NS4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
+    <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'978ef0ef50d38b47',t:'MTc1NjgzNjM4NS4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
+</body>
 </html>
