--- a/index.html
+++ b/index.html
@@ -55,10 +55,12 @@
 
             <div id="templateGrid" class="template-grid">
                 <!-- Templates will be loaded here -->
+                 <div id="templateGrid" class="template-grid dropzone"></div>
             </div>
 
             <div id="folderGrid" class="template-grid" aria-live="polite">
                 <!-- Folders will be added here -->
+                 <div id="folderGrid" class="template-grid dropzone"></div>
             </div>
         </div>
 
