--- a/index.html
+++ b/index.html
@@ -53,14 +53,14 @@
         </button>
         </div>
 
-            <div id="templateGrid" class="template-grid">
+            <div id="templateGrid" class="template-grid dropzone">
                 <!-- Templates will be loaded here -->
-                 <div id="templateGrid" class="template-grid dropzone"></div>
+                 
             </div>
 
-            <div id="folderGrid" class="template-grid" aria-live="polite">
+            <div id="folderGrid" class="template-grid dropzone" aria-live="polite">
                 <!-- Folders will be added here -->
-                 <div id="folderGrid" class="template-grid dropzone"></div>
+                
             </div>
         </div>
 
